Quick fix to make Martor usable in dark mode

--- a/resources/martor-description.scss
+++ b/resources/martor-description.scss
@@ -4,7 +4,7 @@ form .martor-preview {
     @include content-description;
 
     min-height: 400px;
-    
+
     ul li {
         list-style: unset !important;
     }
@@ -43,5 +43,14 @@ form .martor-preview {
 
     .martor-field {
         height: 400px;
+    }
+
+    @if not $is_light_theme {
+        background: white;
+        border-radius: 4px;
+
+        .martor-preview {
+            background: black !important;
+        }
     }
 }
